--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,66 @@ jobs:
         mv drivers/video/fbdev/rm68090fb.ko dist/
         mv drivers/video/fbdev/miyoo-tvout.ko dist/
         mv drivers/usb/gadget/legacy/g_acm_ms.ko dist/
+        
+  build:
+    name: kernel for MiyooCFW (musl)
+    runs-on: ubuntu-22.04
+    container:
+      image: miyoocfw/toolchain-shared-musl:master
+    steps:
+    - uses: actions/checkout@v3
+    
+    - if: inputs.submodule
+      run: git submodule update --init --depth 1 -- ${{ inputs.submodule }}
+    
+    - name: Generate cache key
+      if: inputs.submodule
+      id: cache-key
+      run: |
+        cd ${{ inputs.submodule }}
+        echo "key=${{ inputs.submodule }}-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
+    - uses: actions/cache@v3
+      if: inputs.submodule
+      with:
+        path: ${{ inputs.submodule || '.' }}/dist/*
+        key: ${{ steps.cache-key.outputs.key }}
+      id: cache
+      
+    # ARCH=arm and CROSS_COMPILE=arm-buildroot-linux-musleabi- env props are set in the docker image
+    - name: build
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        cd ${{ inputs.submodule || '.' }}
+        make miyoo_defconfig
+        make
+        
+        # put everything in the same folder so that we can grab it all as a single artifact
+    - name: gather files
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        cd ${{ inputs.submodule || '.' }}
+        mkdir dist
+        mv arch/arm/boot/dts/suniv-f1c500s-miyoo.dtb dist/
+        mv arch/arm/boot/dts/suniv-f1c500s-miyoo-4bit.dtb dist/
+        mv arch/arm/boot/zImage dist/
+        mv drivers/video/fbdev/core/*.ko dist/
+        mv drivers/video/fbdev/r61520fb.ko dist/
+        mv drivers/video/fbdev/gc9306fb.ko dist/
+        mv drivers/video/fbdev/st7789sfb.ko dist/
+        mv drivers/video/fbdev/st7789sTEfb.ko dist/
+        mv drivers/video/fbdev/rm68090fb.ko dist/
+        mv drivers/video/fbdev/miyoo-tvout.ko dist/
+        mv drivers/usb/gadget/legacy/g_acm_ms.ko dist/
+
+        
+    - run: find ${{ inputs.submodule || '.' }}/dist
+    
+    - uses: actions/upload-artifact@v3
+      with:
+        name: kernel (musl)
+        path: ${{ inputs.submodule || '.' }}/dist/*
+        if-no-files-found: error # 'error', 'warn', 'ignore'; defaults to `warn`
 
         
     - run: find ${{ inputs.submodule || '.' }}/dist
