--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
         mv drivers/video/fbdev/st7789sfb.ko dist/
         mv drivers/video/fbdev/st7789sTEfb.ko dist/
         mv drivers/video/fbdev/rm68090fb.ko dist/
+         mv drivers/video/fbdev/fc3000fb.ko dist/
         mv drivers/video/fbdev/miyoo-tvout.ko dist/
         mv drivers/usb/gadget/legacy/g_acm_ms.ko dist/
 
